<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/htp_label"
                android:contentDescription="@string/htp_label"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/htp_instr1"
                android:contentDescription="@string/htp_instr1"
                android:textSize="15sp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/htp_instr2"
                android:contentDescription="@string/htp_instr2"
                android:textSize="15sp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/htp_instr3"
                android:contentDescription="@string/htp_instr3"
                android:textSize="15sp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/htp_instr4"
                android:contentDescription="@string/htp_instr4"
                android:textSize="15sp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/htp_instr5"
                android:contentDescription="@string/htp_instr5"
                android:textSize="15sp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/htp_instr6"
                android:contentDescription="@string/htp_instr6"
                android:textSize="15sp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/htp_unranked"
                android:contentDescription="@string/htp_unranked"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/htp_unranked_instr"
                android:contentDescription="@string/htp_unranked_instr"
                android:textSize="15sp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/htp_ranked"
                android:contentDescription="@string/htp_ranked"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/htp_ranked_instr1"
                android:contentDescription="@string/htp_ranked_instr1"
                android:textSize="15sp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/htp_ranked_instr2"
                android:contentDescription="@string/htp_ranked_instr2"
                android:textSize="15sp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/htp_ranked_instr3"
                android:contentDescription="@string/htp_ranked_instr3"
                android:textSize="15sp"
                android:layout_marginBottom="15dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/close_button"
                android:contentDescription="@string/close_button"
                android:id="@+id/howToPlayClose"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>