<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/about_version"
                android:contentDescription="@string/about_version"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/about_created"
                android:contentDescription="@string/about_created"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/about_email"
                android:contentDescription="@string/about_email"
                android:layout_marginBottom="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/about_art_label"
                android:contentDescription="@string/about_art_label"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/about_label_cards"
                android:contentDescription="@string/about_label_cards"
                android:id="@+id/aboutCards"
                android:layout_marginBottom="10dp"
                android:autoLink="web"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/about_label_dead"
                android:contentDescription="@string/about_label_dead"
                android:id="@+id/aboutDead"
                android:layout_marginBottom="10dp"
                android:autoLink="web"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/about_label_hat"
                android:contentDescription="@string/about_label_hat"
                android:id="@+id/aboutHat"
                android:layout_marginBottom="10dp"
                android:autoLink="web"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/about_label_chair"
                android:contentDescription="@string/about_label_chair"
                android:id="@+id/aboutChair"
                android:layout_marginBottom="10dp"
                android:autoLink="web"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/about_label_avatar"
                android:contentDescription="@string/about_label_avatar"
                android:id="@+id/aboutAvatar"
                android:layout_marginBottom="10dp"
                android:autoLink="web"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/about_label_crown"
                android:contentDescription="@string/about_label_crown"
                android:id="@+id/aboutCrown"
                android:layout_marginBottom="20dp"
                android:autoLink="web"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/close_button"
                android:contentDescription="@string/close_button"
                android:id="@+id/aboutClose"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>