<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/linLayout">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/settings_port_label"
                android:contentDescription="@string/settings_port_label"
                android:textSize="20sp"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/conSettingsPort"
                android:textSize="20sp"
                android:gravity="center"
                android:maxLines="1"
                android:inputType="number" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/settings_ip_label"
                android:contentDescription="@string/settings_ip_label"
                android:textSize="20sp"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/conSettingsIP"
                android:textSize="20sp"
                android:gravity="center"
                android:maxLines="1"
                android:inputType="text" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:id="@+id/buttonLayout">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/conSettingsSubmit"
                    android:text="@string/submit_button"
                    android:contentDescription="@string/submit_button"
                    android:textSize="20sp"
                    android:layout_marginEnd="10dp"
                    android:padding="15sp"
                    android:layout_marginRight="10dp" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/conSettingsCancel"
                    android:text="@string/cancel_button"
                    android:contentDescription="@string/cancel_button"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"
                    android:padding="15sp"
                    android:layout_marginLeft="10dp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>